admin stylinh: expand-collapse-block fix

--- a/css/admin/stylus/parts/general.styl
+++ b/css/admin/stylus/parts/general.styl
@@ -814,7 +814,8 @@ table.banners_stat td.sel, table.banners_stat th.sel
         visibility hidden
 
 .expand-collapse-block
-    float right
+    position absolute
+    right 0
     padding 10px 25px 0 10px
     u
         display inline-block
